Implement Auth System

--- a/login.html
+++ b/login.html
@@ -92,20 +92,82 @@
         const registerContainer = document.getElementById('register-container');
         const showRegisterLink = document.getElementById('show-register');
         const showLoginLink = document.getElementById('show-login');
+        const loginForm = document.getElementById('login-form');
+        const registerForm = document.getElementById('register-form');
+        const API_URL = 'https://ourwhiteboard.onrender.com/api'; // Ensure this matches production
 
+        // Toggle Forms
         showRegisterLink.addEventListener('click', (e) => {
             e.preventDefault();
             loginContainer.classList.add('hidden');
             registerContainer.classList.remove('hidden');
         });
-
         showLoginLink.addEventListener('click', (e) => {
             e.preventDefault();
             registerContainer.classList.add('hidden');
             loginContainer.classList.remove('hidden');
         });
 
-        // We will add form submission logic later
+        // Register Logic
+        registerForm.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const name = document.getElementById('register-name').value;
+            const email = document.getElementById('register-email').value;
+            const password = document.getElementById('register-password').value;
+            const confirmPassword = document.getElementById('register-confirm-password').value;
+
+            if (password !== confirmPassword) {
+                alert("Passwords do not match!");
+                return;
+            }
+
+            try {
+                const response = await fetch(`${API_URL}/register`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ name, email, password })
+                });
+                const data = await response.json();
+                
+                if (response.ok) {
+                    alert('Registration successful! Please login.');
+                    showLoginLink.click();
+                } else {
+                    alert(data.error || 'Registration failed');
+                }
+            } catch (error) {
+                console.error(error);
+                alert('Error connecting to server');
+            }
+        });
+
+        // Login Logic
+        loginForm.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const email = document.getElementById('login-email').value;
+            const password = document.getElementById('login-password').value;
+
+            try {
+                const response = await fetch(`${API_URL}/login`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ email, password })
+                });
+                const data = await response.json();
+
+                if (response.ok) {
+                    // Save token and user info
+                    localStorage.setItem('authToken', data.token);
+                    localStorage.setItem('user', JSON.stringify(data.user));
+                    window.location.href = 'whiteboard.html';
+                } else {
+                    alert(data.error || 'Login failed');
+                }
+            } catch (error) {
+                console.error(error);
+                alert('Error connecting to server');
+            }
+        });
     </script>
 
 </body>
