--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,18 +15,21 @@
             background-color: #f8f9fa;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
+
         .form-container {
             padding: 40px;
             background-color: #ffffff;
             border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
             width: 100%;
             max-width: 400px;
         }
+
         .form-container h1 {
             margin-bottom: 24px;
         }
+
         .form-container input {
             width: 100%;
             padding: 12px;
@@ -34,6 +38,7 @@
             border-radius: 4px;
             box-sizing: border-box;
         }
+
         .form-container button {
             width: 100%;
             padding: 12px;
@@ -45,9 +50,11 @@
             cursor: pointer;
             transition: background-color 0.2s;
         }
+
         .form-container button:hover {
             background-color: #0056b3;
         }
+
         .toggle-link {
             display: block;
             margin-top: 20px;
@@ -55,14 +62,17 @@
             text-decoration: none;
             cursor: pointer;
         }
+
         .toggle-link:hover {
             text-decoration: underline;
         }
+
         .hidden {
             display: none;
         }
     </style>
 </head>
+
 <body>
 
     <div class="form-container" id="login-container">
@@ -94,7 +104,7 @@
         const showLoginLink = document.getElementById('show-login');
         const loginForm = document.getElementById('login-form');
         const registerForm = document.getElementById('register-form');
-        const API_URL = 'https://ourwhiteboard.onrender.com/api'; // Ensure this matches production
+        const API_URL = 'https://ourwhiteboard.onrender.com/api';
 
         // Toggle Forms
         showRegisterLink.addEventListener('click', (e) => {
@@ -111,6 +121,12 @@
         // Register Logic
         registerForm.addEventListener('submit', async (e) => {
             e.preventDefault();
+            console.log("Register button clicked");
+            const btn = registerForm.querySelector('button');
+            const originalText = btn.innerText;
+            btn.innerText = "Loading...";
+            btn.disabled = true;
+
             const name = document.getElementById('register-name').value;
             const email = document.getElementById('register-email').value;
             const password = document.getElementById('register-password').value;
@@ -118,17 +134,21 @@
 
             if (password !== confirmPassword) {
                 alert("Passwords do not match!");
+                btn.innerText = originalText;
+                btn.disabled = false;
                 return;
             }
 
             try {
+                console.log("Sending register request to:", `${API_URL}/register`);
                 const response = await fetch(`${API_URL}/register`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ name, email, password })
                 });
+                console.log("Response status:", response.status);
                 const data = await response.json();
-                
+
                 if (response.ok) {
                     alert('Registration successful! Please login.');
                     showLoginLink.click();
@@ -136,39 +156,55 @@
                     alert(data.error || 'Registration failed');
                 }
             } catch (error) {
-                console.error(error);
-                alert('Error connecting to server');
+                console.error("Fetch error:", error);
+                alert('Error connecting to server. check Console for details.');
+            } finally {
+                btn.innerText = originalText;
+                btn.disabled = false;
             }
         });
 
         // Login Logic
         loginForm.addEventListener('submit', async (e) => {
             e.preventDefault();
+            console.log("Login button clicked");
+            const btn = loginForm.querySelector('button');
+            const originalText = btn.innerText;
+            btn.innerText = "Loading...";
+            btn.disabled = true;
+
             const email = document.getElementById('login-email').value;
             const password = document.getElementById('login-password').value;
 
             try {
+                console.log("Sending login request to:", `${API_URL}/login`);
                 const response = await fetch(`${API_URL}/login`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ email, password })
                 });
+                console.log("Response status:", response.status);
                 const data = await response.json();
 
                 if (response.ok) {
-                    // Save token and user info
+                    console.log("Login success");
                     localStorage.setItem('authToken', data.token);
                     localStorage.setItem('user', JSON.stringify(data.user));
                     window.location.href = 'whiteboard.html';
                 } else {
+                    console.warn("Login failed:", data.error);
                     alert(data.error || 'Login failed');
                 }
             } catch (error) {
-                console.error(error);
-                alert('Error connecting to server');
+                console.error("Fetch error:", error);
+                alert('Error connecting to server. Check Console for details.');
+            } finally {
+                btn.innerText = originalText;
+                btn.disabled = false;
             }
         });
     </script>
 
 </body>
+
 </html>
