--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Whiteboard</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="app.css">
     <style>
         body {
             display: flex;
