--- a/whiteboard.html
+++ b/whiteboard.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whiteboard</title>
     <link rel="stylesheet" href="app.css">
 </head>
+
 <body>
     <div class="app-container">
         <!-- Sidebar -->
@@ -61,7 +63,7 @@
                 </div>
 
                 <div class="task-card priority-done non-deletable" data-group="coordinators" data-type="done">
-                     <div class="card-header">
+                    <div class="card-header">
                         <h3>Tasks done - Coordinators</h3>
                         <button class="add-task-item-btn">+</button>
                     </div>
@@ -77,7 +79,7 @@
                 </div>
 
                 <div class="task-card priority-5 non-deletable" data-group="supervisors" data-type="done">
-                     <div class="card-header">
+                    <div class="card-header">
                         <h3>Tasks done - Supervisors</h3>
                     </div>
                     <ul><!-- Completed tasks will go here --></ul>
@@ -101,38 +103,42 @@
 
     <!-- Custom Confirmation Modal -->
     <div id="custom-confirm-modal" class="modal-overlay hidden">
-            <div class="modal-content">
-                <p id="confirm-modal-text">Are you sure you want to delete this sticker?</p>
-                <div class="modal-buttons">
-                    <button id="confirm-delete-btn" class="btn-confirm">Delete</button>
-                    <button id="cancel-delete-btn" class="btn-cancel">Cancel</button>
-                </div>
+        <div class="modal-content">
+            <p id="confirm-modal-text">Are you sure you want to delete this sticker?</p>
+            <div class="modal-buttons">
+                <button id="confirm-delete-btn" class="btn-confirm">Delete</button>
+                <button id="cancel-delete-btn" class="btn-cancel">Cancel</button>
             </div>
         </div>
+    </div>
 
     <!-- Task Editor/Viewer Modal -->
     <div id="task-modal" class="modal-overlay hidden">
         <div class="modal-content">
             <h3 id="task-modal-title">New Task</h3>
             <div class="priority-selection">
-                <label><input type="radio" name="priority" value="red" checked> <span class="priority-color-dot red"></span></label>
-                <label><input type="radio" name="priority" value="orange"> <span class="priority-color-dot orange"></span></label>
-                <label><input type="radio" name="priority" value="yellow"> <span class="priority-color-dot yellow"></span></label>
+                <label><input type="radio" name="priority" value="red" checked> <span
+                        class="priority-color-dot red"></span></label>
+                <label><input type="radio" name="priority" value="orange"> <span
+                        class="priority-color-dot orange"></span></label>
+                <label><input type="radio" name="priority" value="yellow"> <span
+                        class="priority-color-dot yellow"></span></label>
             </div>
             <input type="text" id="task-title-input" placeholder="Task Title" maxlength="100">
             <textarea id="task-text-input" placeholder="Task description..." maxlength="400"></textarea>
-                <div id="task-dates" class="hidden">
-                    <p><strong>Created on:</strong> <span id="creation-date"></span></p>
-                    <p><strong>Completed on:</strong> <span id="completion-date"></span></p>
-                </div>
+            <div id="task-dates" class="hidden">
+                <p><strong>Created on:</strong> <span id="creation-date"></span></p>
+                <p><strong>Completed on:</strong> <span id="completion-date"></span></p>
+            </div>
             <div class="modal-buttons">
-                    <button id="save-task-btn" class="btn-save">Save</button>
-                    <button id="close-task-modal-btn" class="btn-cancel">Close</button>
-                    <button id="complete-task-btn" class="btn-complete hidden">Mark as Done</button>
-                </div>
+                <button id="save-task-btn" class="btn-save">Save</button>
+                <button id="close-task-modal-btn" class="btn-cancel">Close</button>
+                <button id="complete-task-btn" class="btn-complete hidden">Mark as Done</button>
+            </div>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
+
 </html>
