--- a/login.html
+++ b/login.html
@@ -97,106 +97,7 @@
         <a id="show-login" class="toggle-link">Already have an account? Login</a>
     </div>
 
-    const API_URL = 'https://ourwhiteboard.onrender.com/api';
-
-    // Toggle Forms
-    showRegisterLink.addEventListener('click', (e) => {
-    e.preventDefault();
-    loginContainer.classList.add('hidden');
-    registerContainer.classList.remove('hidden');
-    });
-    showLoginLink.addEventListener('click', (e) => {
-    e.preventDefault();
-    registerContainer.classList.add('hidden');
-    loginContainer.classList.remove('hidden');
-    });
-
-    // Register Logic
-    registerForm.addEventListener('submit', async (e) => {
-    e.preventDefault();
-    console.log("Register button clicked");
-    const btn = registerForm.querySelector('button');
-    const originalText = btn.innerText;
-    btn.innerText = "Loading...";
-    btn.disabled = true;
-
-    const name = document.getElementById('register-name').value;
-    const email = document.getElementById('register-email').value;
-    const password = document.getElementById('register-password').value;
-    const confirmPassword = document.getElementById('register-confirm-password').value;
-
-    if (password !== confirmPassword) {
-    alert("Passwords do not match!");
-    btn.innerText = originalText;
-    btn.disabled = false;
-    return;
-    }
-
-    try {
-    console.log("Sending register request to:", `${API_URL}/register`);
-    const response = await fetch(`${API_URL}/register`, {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ name, email, password })
-    });
-    console.log("Response status:", response.status);
-    const data = await response.json();
-
-    if (response.ok) {
-    alert('Registration successful! Please login.');
-    showLoginLink.click();
-    } else {
-    alert(data.error || 'Registration failed');
-    }
-    } catch (error) {
-    console.error("Fetch error:", error);
-    alert('Error connecting to server. check Console for details.');
-    } finally {
-    btn.innerText = originalText;
-    btn.disabled = false;
-    }
-    });
-
-    // Login Logic
-    loginForm.addEventListener('submit', async (e) => {
-    e.preventDefault();
-    console.log("Login button clicked");
-    const btn = loginForm.querySelector('button');
-    const originalText = btn.innerText;
-    btn.innerText = "Loading...";
-    btn.disabled = true;
-
-    const email = document.getElementById('login-email').value;
-    const password = document.getElementById('login-password').value;
-
-    try {
-    console.log("Sending login request to:", `${API_URL}/login`);
-    const response = await fetch(`${API_URL}/login`, {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ email, password })
-    });
-    console.log("Response status:", response.status);
-    const data = await response.json();
-
-    if (response.ok) {
-    console.log("Login success");
-    localStorage.setItem('authToken', data.token);
-    localStorage.setItem('user', JSON.stringify(data.user));
-    window.location.href = 'whiteboard.html';
-    } else {
-    console.warn("Login failed:", data.error);
-    alert(data.error || 'Login failed');
-    }
-    } catch (error) {
-    console.error("Fetch error:", error);
-    alert('Error connecting to server. Check Console for details.');
-    } finally {
-    btn.innerText = originalText;
-    btn.disabled = false;
-    }
-    });
-    </script>
+    <script src="main.js"></script>
 
 </body>
 
