--- a/login.html
+++ b/login.html
@@ -97,8 +97,7 @@
         <a id="show-login" class="toggle-link">Already have an account? Login</a>
     </div>
 
-    <script src="main.js"></script>
-
+    <script src="app.js"></script>
     <!-- Force Update -->
 </body>
 
