--- a/whiteboard.html
+++ b/whiteboard.html
@@ -45,6 +45,10 @@
             <div class="filter-container">
                 <input type="text" id="filter-input" placeholder="Filter by title...">
             </div>
+
+            <div class="logout-container" style="margin-top: 20px;">
+                <button id="logout-btn" class="logout-btn">Logout</button>
+            </div>
         </aside>
 
         <!-- Main Content -->
