--- a/whiteboard.html
+++ b/whiteboard.html
@@ -59,7 +59,7 @@
             </header>
             <section class="tasks-grid">
                 <!-- Permanent task cards -->
-                <div class="task-card priority-1 non-deletable" data-group="coordinators" data-type="todo">
+                <div class="task-card non-deletable" data-group="coordinators" data-type="todo">
                     <div class="card-header">
                         <h3>To Do - Coordinators</h3>
                         <button class="add-task-item-btn">+</button>
@@ -67,14 +67,14 @@
                     <ul><!-- Tasks will be added here dynamically --></ul>
                 </div>
 
-                <div class="task-card priority-done non-deletable" data-group="coordinators" data-type="done">
+                <div class="task-card non-deletable" data-group="coordinators" data-type="done">
                     <div class="card-header">
                         <h3>Tasks done - Coordinators</h3>
                     </div>
                     <ul><!-- Completed tasks will go here --></ul>
                 </div>
 
-                <div class="task-card priority-4 non-deletable" data-group="supervisors" data-type="todo">
+                <div class="task-card non-deletable" data-group="supervisors" data-type="todo">
                     <div class="card-header">
                         <h3>To Do - Supervisors</h3>
                         <button class="add-task-item-btn">+</button>
@@ -82,7 +82,7 @@
                     <ul><!-- Tasks will be added here dynamically --></ul>
                 </div>
 
-                <div class="task-card priority-5 non-deletable" data-group="supervisors" data-type="done">
+                <div class="task-card non-deletable" data-group="supervisors" data-type="done">
                     <div class="card-header">
                         <h3>Tasks done - Supervisors</h3>
                     </div>
