--- a/whiteboard.html
+++ b/whiteboard.html
@@ -142,6 +142,9 @@
         </div>
     </div>
 
+    <!-- Container for Toast Notifications -->
+    <div id="notification-container" class="notification-container"></div>
+
     <script src="app.js"></script>
 </body>
 
