--- a/whiteboard.html
+++ b/whiteboard.html
@@ -22,19 +22,8 @@
 
             <div class="employee-status-list">
                 <h4>STATUS</h4>
-                <ul>
-                    <li>
-                        <span class="status-dot status-free"></span>
-                        <span>Danilo</span>
-                    </li>
-                    <li>
-                        <span class="status-dot status-busy"></span>
-                        <span>Fernanda</span>
-                    </li>
-                    <li>
-                        <span class="status-dot status-meeting"></span>
-                        <span>Rodrigo</span>
-                    </li>
+                <ul id="user-status-list">
+                    <!-- Users loaded dynamically -->
                 </ul>
             </div>
 
