--- a/whiteboard.html
+++ b/whiteboard.html
@@ -91,6 +91,7 @@
             <li data-status="meeting"><span class="status-dot status-meeting"></span> In a meeting</li>
             <li data-status="on-call"><span class="status-dot status-on-call"></span> On Call</li>
             <li data-status="away"><span class="status-dot status-away"></span> Away</li>
+            <li data-status="holiday"><span class="status-dot status-holiday"></span> Holiday</li>
         </ul>
     </div>
 
