--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Whiteboard</title>
     <link rel="icon" type="image/png" href="favicon-32x32.png">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="app.css?v=3">
     <style>
         body {
             display: flex;
