--- a/whiteboard.html
+++ b/whiteboard.html
@@ -85,13 +85,14 @@
 
     <!-- Status Change Pop-up (hidden by default) -->
     <div id="status-popup" class="status-popup hidden">
-        <ul>
-            <li data-status="free"><span class="status-dot status-free"></span> Free</li>
-            <li data-status="busy"><span class="status-dot status-busy"></span> Busy</li>
-            <li data-status="meeting"><span class="status-dot status-meeting"></span> In a meeting</li>
-            <li data-status="on-call"><span class="status-dot status-on-call"></span> On Call</li>
-            <li data-status="away"><span class="status-dot status-away"></span> Away</li>
-            <li data-status="holiday"><span class="status-dot status-holiday"></span> On Holiday</li>
+        <ul style="list-style:none; padding:0; margin:0;">
+            <li data-status="free"><span class="status-dot status-free"></span> Free ⚡</li>
+            <li data-status="busy"><span class="status-dot status-busy"></span> Busy ⛔</li>
+            <li data-status="meeting"><span class="status-dot status-meeting"></span> In a meeting 📅</li>
+            <li data-status="on-call"><span class="status-dot status-on-call"></span> On Call 📞</li>
+            <li data-status="away"><span class="status-dot status-away"></span> Away 🚗💨</li>
+            <li data-status="break"><span class="status-dot status-break"></span> On Break 🍽️</li>
+            <li data-status="holiday"><span class="status-dot status-holiday"></span> On Holiday 🏖️</li>
         </ul>
     </div>
 
