--- a/login.html
+++ b/login.html
@@ -15,6 +15,11 @@
             height: 100vh;
             background-color: #f8f9fa;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            background-image: url('bg-glasnevin.png');
+            background-position: bottom center;
+            background-repeat: no-repeat;
+            background-size: 100% auto;
+            background-attachment: fixed;
         }
 
         .form-container {
