--- a/login.html
+++ b/login.html
@@ -13,13 +13,12 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f8f9fa;
+            background-color: #ffffff;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             background-image: url('bg-glasnevin.png');
             background-position: bottom center;
             background-repeat: no-repeat;
             background-size: 100% auto;
-            background-attachment: fixed;
         }
 
         .form-container {
