--- a/login.html
+++ b/login.html
@@ -16,9 +16,9 @@
             background-color: #ffffff;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             background-image: url('bg-glasnevin.png');
-            background-position: center bottom;
+            background-position: bottom center;
             background-repeat: no-repeat;
-            background-size: 100% auto;
+            background-size: cover;
             background-attachment: fixed;
         }
 
