--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Whiteboard</title>
     <link rel="icon" type="image/png" href="favicon-32x32.png">
-    <link rel="stylesheet" href="app.css?v=3">
+    <link rel="stylesheet" href="app.css?v=4">
     <style>
         body {
             display: flex;
@@ -16,9 +16,9 @@
             background-color: #ffffff;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             background-image: url('bg-glasnevin.png');
-            background-position: bottom center;
+            background-position: center bottom;
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: 100% auto;
             background-attachment: fixed;
         }
 
