--- a/login.html
+++ b/login.html
@@ -110,6 +110,13 @@
         <a id="show-login" class="toggle-link">Already have an account? Login</a>
     </div>
 
+    <!-- Support Link -->
+    <div style="margin-top: 20px; text-align: center; font-size: 0.85rem; color: #6c757d;">
+        <p>Problems with login or bugs?<br>
+            <a href="mailto:danilo@iniscare.ie" style="color: #6c757d; text-decoration: underline;">Contact Support</a>
+        </p>
+    </div>
+
     <!-- Notification Container -->
     <div id="notification-container" class="notification-container"></div>
 
