--- a/admin.html
+++ b/admin.html
@@ -75,6 +75,7 @@
           <th>Name</th>
           <th>Email</th>
           <th>Status</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
@@ -92,7 +93,9 @@
           <th>Title</th>
           <th>Status</th>
           <th>Assigned To (Group)</th>
+          <th>Created By (ID)</th>
           <th>Created At</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
