--- a/whiteboard.html
+++ b/whiteboard.html
@@ -134,8 +134,7 @@
             </div>
             <div class="modal-buttons">
                 <button id="save-task-btn" class="btn-save">Save</button>
-                <button id="delete-task-btn" class="btn-delete hidden"
-                    style="background-color: #dc3545; color: white;">Delete</button>
+                <button id="delete-task-btn" class="btn-delete hidden">Delete</button>
                 <button id="close-task-modal-btn" class="btn-cancel">Close</button>
                 <button id="complete-task-btn" class="btn-complete hidden">Mark as Done</button>
             </div>
