--- a/admin.html
+++ b/admin.html
@@ -39,7 +39,7 @@
           <th>Title</th>
           <th>Status</th>
           <th>Assigned To (Group)</th>
-          <th>Created By (ID)</th>
+          <th>Created By (Name)</th>
           <th>Created At</th>
           <th>Action</th>
         </tr>
@@ -91,29 +91,52 @@
     };
 
     async function loadData() {
-      // Load Users
+      let userMap = {};
+      let groupMap = {};
+
+      // 1. Load Users & Build Map
       try {
         const resUsers = await fetch(`${API_URL}/users`);
         const users = await resUsers.json();
-        const userRows = users.map(u => `
-                    <tr>
-                        <td>${u.id}</td>
-                        <td>${u.name || '-'}</td>
-                        <td>${u.email}</td>
-                        <td>${u.status || 'free'}</td>
-                        <td>
-                            <button onclick="deleteUser('${u.id}')" style="background: #dc3545; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer;">Delete</button>
-                        </td>
-                    </tr>
-                `).join('');
-        document.querySelector('#users-table tbody').innerHTML = userRows;
-      } catch (e) { console.error(e); }
 
-      // Load Tasks
+        users.forEach(u => {
+          userMap[u.id] = u.name;
+        });
+
+        const userRows = users.map(u => `
+            <tr>
+                <td>${u.id}</td>
+                <td>${u.name || '-'}</td>
+                <td>${u.email}</td>
+                <td>${u.status || 'free'}</td>
+                <td>
+                    <button onclick="deleteUser('${u.id}')" class="btn-small-delete">Delete</button>
+                </td>
+            </tr>
+        `).join('');
+        document.querySelector('#users-table tbody').innerHTML = userRows;
+      } catch (e) { console.error("Error loading users:", e); }
+
+      // 2. Load Groups & Build Map
       try {
-        const resTasks = await fetch(`${API_URL}/tasks`); // Gets all tasks
+        const resGroups = await fetch(`${API_URL}/groups`);
+        const groups = await resGroups.json();
+
+        groups.forEach(g => {
+          groupMap[g.id] = g.name;
+        });
+      } catch (e) { console.error("Error loading groups:", e); }
+
+      // 3. Load Tasks & Render with Maps
+      try {
+        const resTasks = await fetch(`${API_URL}/tasks`);
         const tasks = await resTasks.json();
-        const taskRows = tasks.map(t => `
+
+        const taskRows = tasks.map(t => {
+          const creatorName = userMap[t.created_by] || `ID: ${t.created_by || '?'}`;
+          const groupName = groupMap[t.group_id] || `Group ${t.group_id}`;
+
+          return `
                     <tr>
                         <td>${t.id}</td>
                         <td>${t.title}</td>
@@ -122,16 +145,17 @@
                                 ${t.status}
                             </span>
                         </td>
-                        <td>${t.group_id == 1 ? 'Coordinators' : (t.group_id == 2 ? 'Supervisors' : t.group_id)}</td>
-                         <td>${t.created_by || 'NULL'}</td> 
+                        <td>${groupName}</td>
+                        <td>${creatorName}</td> 
                         <td>${new Date(t.created_at).toLocaleString()}</td>
                         <td>
-                            <button onclick="deleteTask('${t.id}')" style="background: #dc3545; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer;">Delete</button>
+                            <button onclick="deleteTask('${t.id}')" class="btn-small-delete">Delete</button>
                         </td>
                     </tr>
-                `).join('');
+                `;
+        }).join('');
         document.querySelector('#tasks-table tbody').innerHTML = taskRows;
-      } catch (e) { console.error(e); }
+      } catch (e) { console.error("Error loading tasks:", e); }
     }
 
     // Auto load
