--- a/whiteboard.html
+++ b/whiteboard.html
@@ -95,6 +95,7 @@
             <li data-status="away"><span class="status-dot status-away"></span> Away 🚗💨</li>
             <li data-status="break"><span class="status-dot status-break"></span> On Break 🍽️</li>
             <li data-status="holiday"><span class="status-dot status-holiday"></span> On Holiday 🏖️</li>
+            <li data-status="offline"><span class="status-dot status-offline"></span> Offline 💤</li>
         </ul>
     </div>
 
