--- a/whiteboard.html
+++ b/whiteboard.html
@@ -59,6 +59,14 @@
                     <ul id="introduction-list"><!-- Tasks grouped by date will go here --></ul>
                 </div>
 
+                <div class="task-card non-deletable" data-group="introduction" data-type="done"
+                    style="border-top-color: #17a2b8; background-color: #f2fdff;">
+                    <div class="card-header">
+                        <h3>Tasks done - Introduction</h3>
+                    </div>
+                    <ul id="introduction-done-list"><!-- Completed tasks will go here --></ul>
+                </div>
+
                 <!-- Permanent task cards -->
                 <div class="task-card non-deletable" data-group="coordinators" data-type="todo">
                     <div class="card-header">
