--- a/whiteboard.html
+++ b/whiteboard.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="filter-container">
-                <input type="text" id="filter-input" placeholder="Filter by title...">
+                <input type="text" id="filter-input" placeholder="Search">
             </div>
 
             <div class="logout-container" style="margin-top: 20px;">
