--- a/whiteboard.html
+++ b/whiteboard.html
@@ -50,8 +50,7 @@
             </header>
             <section class="tasks-grid">
                 <!-- Introduction Card (New Feature) -->
-                <div class="task-card non-deletable" data-group="introduction" data-type="todo"
-                    style="border-top-color: #17a2b8; background-color: #e0f7fa;">
+                <div class="task-card non-deletable" data-group="introduction" data-type="todo">
                     <div class="card-header">
                         <h3>Introduction (Schedule)</h3>
                         <button class="add-task-item-btn" style="color: #17a2b8;">+</button>
@@ -59,8 +58,7 @@
                     <ul id="introduction-list"><!-- Tasks grouped by date will go here --></ul>
                 </div>
 
-                <div class="task-card non-deletable" data-group="introduction" data-type="done"
-                    style="border-top-color: #17a2b8; background-color: #f2fdff;">
+                <div class="task-card non-deletable" data-group="introduction" data-type="done">
                     <div class="card-header">
                         <h3>Tasks done - Introduction</h3>
                     </div>
