--- a/whiteboard.html
+++ b/whiteboard.html
@@ -105,6 +105,13 @@
                     <ul><!-- Tasks will be added here dynamically --></ul>
                 </div>
 
+                <div class="task-card non-deletable" data-group="sheets-needed" data-type="done" data-color="purple">
+                    <div class="card-header">
+                        <h3>Tasks done - Sheets Needed</h3>
+                    </div>
+                    <ul><!-- Completed tasks will go here --></ul>
+                </div>
+
                 <!-- Dynamically added task cards will go here -->
             </section>
         </main>
