--- a/whiteboard.html
+++ b/whiteboard.html
@@ -112,6 +112,40 @@
                     <ul><!-- Completed tasks will go here --></ul>
                 </div>
 
+                <!-- Sick Carers -->
+                <div class="task-card non-deletable" data-group="sick-carers" data-type="todo" data-color="orange">
+                    <div class="card-header">
+                        <h3>To Do - Sick Carers</h3>
+                        <button class="add-task-item-btn">+</button>
+                    </div>
+                    <ul></ul>
+                </div>
+
+                <div class="task-card non-deletable" data-group="sick-carers" data-type="done" data-color="orange">
+                    <div class="card-header">
+                        <h3>Tasks done - Sick Carers</h3>
+                    </div>
+                    <ul></ul>
+                </div>
+
+                <!-- Sick Carers Returned -->
+                <div class="task-card non-deletable" data-group="sick-carers-returned" data-type="todo"
+                    data-color="cyan">
+                    <div class="card-header">
+                        <h3>To Do - Sick Carers Returned</h3>
+                        <button class="add-task-item-btn">+</button>
+                    </div>
+                    <ul></ul>
+                </div>
+
+                <div class="task-card non-deletable" data-group="sick-carers-returned" data-type="done"
+                    data-color="cyan">
+                    <div class="card-header">
+                        <h3>Tasks done - Sick Carers Returned</h3>
+                    </div>
+                    <ul></ul>
+                </div>
+
                 <!-- Dynamically added task cards will go here -->
             </section>
         </main>
