--- a/whiteboard.html
+++ b/whiteboard.html
@@ -132,7 +132,7 @@
                 <div class="task-card non-deletable" data-group="sick-carers-returned" data-type="todo"
                     data-color="cyan">
                     <div class="card-header">
-                        <h3>To Do - Sick Carers Returned</h3>
+                        <h3>To Do - Sick Carers</h3>
                         <button class="add-task-item-btn">+</button>
                     </div>
                     <ul></ul>
