--- a/whiteboard.html
+++ b/whiteboard.html
@@ -139,6 +139,22 @@
                     <ul></ul>
                 </div>
 
+                <!-- Carers to come in (Pink) -->
+                <div class="task-card non-deletable" data-group="carers-come-in" data-type="todo" data-color="pink">
+                    <div class="card-header">
+                        <h3>Carers to come in</h3>
+                        <button class="add-task-item-btn">+</button>
+                    </div>
+                    <ul></ul>
+                </div>
+
+                <div class="task-card non-deletable" data-group="carers-come-in" data-type="done" data-color="pink">
+                    <div class="card-header">
+                        <h3>Done - Carers to come in</h3>
+                    </div>
+                    <ul></ul>
+                </div>
+
                 <!-- Dynamically added task cards will go here -->
             </section>
         </main>
