--- a/whiteboard.html
+++ b/whiteboard.html
@@ -110,7 +110,7 @@
                 <!-- Sheets Needed Cards (Fixed) -->
                 <div class="task-card non-deletable" data-group="sheets-needed" data-type="todo" data-color="purple">
                     <div class="card-header">
-                        <h3>To Do - Sheets Needed</h3>
+                        <h3>To Do - Log Sheets Needed</h3>
                         <button class="add-task-item-btn">+</button>
                     </div>
                     <ul><!-- Tasks will be added here dynamically --></ul>
@@ -118,7 +118,7 @@
 
                 <div class="task-card non-deletable" data-group="sheets-needed" data-type="done" data-color="purple">
                     <div class="card-header">
-                        <h3>Tasks done - Sheets Needed</h3>
+                        <h3>Tasks done - Log Sheets Needed</h3>
                     </div>
                     <ul><!-- Completed tasks will go here --></ul>
                 </div>
