--- a/whiteboard.html
+++ b/whiteboard.html
@@ -118,7 +118,7 @@
 
                 <div class="task-card non-deletable" data-group="sheets-needed" data-type="done" data-color="purple">
                     <div class="card-header">
-                        <h3>Tasks done - Log Sheets Needed</h3>
+                        <h3>Log Sheets Delivered</h3>
                     </div>
                     <ul><!-- Completed tasks will go here --></ul>
                 </div>
