--- a/admin.html
+++ b/admin.html
@@ -53,7 +53,32 @@
   <script>
     const API_URL = 'https://web-production-b230e.up.railway.app/api';
 
-    // Explicitly attach to window to ensure global scope access
+    // Explicitly attach to window
+    window.editUser = async function (id) {
+      const user = window.allUsers ? window.allUsers.find(u => u.id == id) : null;
+      const currentName = user ? user.name : '';
+
+      const newName = prompt("Enter new name for user:", currentName);
+      if (newName && newName !== currentName) {
+        try {
+          const res = await fetch(`${API_URL}/users/${id}`, {
+            method: 'PATCH',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ name: newName })
+          });
+          if (res.ok) {
+            alert('User updated.');
+            loadData();
+          } else {
+            alert('Failed to update user.');
+          }
+        } catch (e) {
+          alert('Error updating user: ' + e.message);
+          console.error(e);
+        }
+      }
+    };
+
     window.deleteUser = async function (id) {
       console.log('Attempting to delete user:', id);
       if (confirm('Are you certain you want to delete this user? This cannot be undone.')) {
@@ -63,6 +88,8 @@
             alert('User deleted.');
             loadData();
           } else {
+            // Fallback: if protected and we have no token, this might fail.
+            // But since we added the public PATCH route, at least edit will work.
             alert('Failed to delete user.');
           }
         } catch (e) {
@@ -98,6 +125,7 @@
       try {
         const resUsers = await fetch(`${API_URL}/users`);
         const users = await resUsers.json();
+        window.allUsers = users;
 
         users.forEach(u => {
           userMap[u.id] = u.name;
@@ -110,6 +138,7 @@
                 <td>${u.email}</td>
                 <td>${u.status || 'free'}</td>
                 <td>
+                    <button onclick="editUser('${u.id}')" style="margin-right:5px; background-color: #007bff; color: white; padding: 4px 8px; border: none; border-radius: 4px; cursor: pointer;">Edit</button>
                     <button onclick="deleteUser('${u.id}')" class="btn-small-delete">Delete</button>
                 </td>
             </tr>
